SERVER-79575 Fix numa node counting.